--- a/app/src/main/res/menu/menu_youtube_player.xml
+++ b/app/src/main/res/menu/menu_youtube_player.xml
@@ -38,4 +38,13 @@
 	<item android:id="@+id/block_channel"
 		android:title="@string/block_channel"
 		app:showAsAction="never"/>
+
+	<item android:id="@+id/open_channel"
+		android:visible="false" 
+		android:title="Open channel"></item>
+
+	<item android:id="@+id/subscribe_channel" 
+		android:visible="false" 
+		android:title="Subscribe"></item>
+
 </menu>
