--- a/app/src/main/res/menu/menu_youtube_player.xml
+++ b/app/src/main/res/menu/menu_youtube_player.xml
@@ -42,10 +42,19 @@
 		android:title="@string/block_channel"
 		app:showAsAction="never"/>
 
+	<item android:id="@+id/open_channel"
+		android:visible="false"
+		android:title="@string/open_channel"/>
+
+	<item android:id="@+id/subscribe_channel"
+		android:visible="false"
+		android:title="@string/subscribe"/>
+
 	<item
 		android:id="@+id/disable_gestures"
 		android:checkable="true"
 		android:title="@string/pref_title_disable_screen_gestures"
 		app:showAsAction="never" />
+
 
 </menu>
