Migrate to AndroidX component library

--- a/app/src/main/res/layout/video_cell.xml
+++ b/app/src/main/res/layout/video_cell.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/top_layout"
@@ -55,7 +55,7 @@
 		app:layout_constraintBaseline_toBaselineOf="@+id/thumbs_up_text_view"
 		app:layout_constraintEnd_toEndOf="parent"/>
 
-	<android.support.constraint.ConstraintLayout
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:background="@color/video_cell_background"
@@ -126,6 +126,6 @@
 			app:layout_constraintTop_toTopOf="parent"
 			app:srcCompat="@drawable/button_options"/>
 
-	</android.support.constraint.ConstraintLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
