--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -6,7 +6,7 @@
 		  android:title="@string/search_videos"
 		  android:icon="@drawable/ic_search"
 		  app:showAsAction="collapseActionView|ifRoom"
-		  app:actionViewClass="android.support.v7.widget.SearchView"/>
+		  app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
 	<item
 		android:id="@+id/menu_blocker"
