--- a/app/src/main/res/xml/preference_others.xml
+++ b/app/src/main/res/xml/preference_others.xml
@@ -44,6 +44,12 @@
 
 	<CheckBoxPreference
 		android:defaultValue="false"
+		android:key="@string/pref_use_newpipe_backend"
+		android:title="@string/pref_title_use_newpipe_backend"
+		android:summary="@string/pref_summary_use_newpipe_backend"/>
+
+	<CheckBoxPreference
+		android:defaultValue="false"
 		android:key="@string/pref_key_subscriptions_alphabetical_order"
 		android:title="@string/pref_title_subscriptions_alphabetical_order"
 		android:summary="@string/pref_summary_subscriptions_alphabetical_order"/>
