Create a new preference fragment for 'Downloads and Network' settings

--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -43,6 +43,12 @@
 	</header>
 
 	<header
+		android:fragment="free.rm.skytube.gui.fragments.preferences.NetworkPreferenceFragment"
+		android:icon="@drawable/ic_pref_others"
+		android:title="@string/pref_network_downloads_category">
+	</header>
+
+	<header
 		android:fragment="free.rm.skytube.gui.fragments.preferences.OthersPreferenceFragment"
 		android:icon="@drawable/ic_pref_others"
 		android:title="@string/pref_other_category">
