--- a/app/src/main/res/values/strings_preferences.xml
+++ b/app/src/main/res/values/strings_preferences.xml
@@ -65,6 +65,8 @@
 	<string name="pref_key_autocast">pref_external_launch</string>
 	<string name="pref_summary_autocast">Select a Chromecast device to always use when opening a video in SkyTube from another application.</string>
 
+	<string name="pref_network_downloads_category">Network and Downloads</string>
+
 	<string name="pref_about_category">About</string>
 	<string name="pref_title_website">Website</string>
 	<string name="pref_key_website" translatable="false">pref_website</string>
