--- a/app/src/main/res/values/strings_preferences.xml
+++ b/app/src/main/res/values/strings_preferences.xml
@@ -579,6 +579,11 @@
 	<string name="pref_title_download_to_separate_directories">Download Videos Into Folders</string>
 	<string name="pref_summary_download_to_separate_directories">Videos are downloaded into folders based on the channel name.</string>
 
+	<string name="pref_key_download_to_temporary_directory" translatable="false">pref_key_download_to_temporary_directory</string>
+	<string name="pref_title_download_to_temporary_directory">Use temporary folder for download</string>
+	<string name="pref_summary_download_to_temporary_directory">Workaround for Download Manager bug, which unable to access external storage in some Android version.</string>
+
+
 	<string name="pref_key_video_download_folder" translatable="false">pref_key_video_download_folder</string>
 	<string name="pref_popup_title_video_download_folder">Choose Folder</string>
 	<string name="pref_title_video_download_folder">Video Download Folder</string>
