--- a/app/src/main/res/xml/preference_downloads.xml
+++ b/app/src/main/res/xml/preference_downloads.xml
@@ -26,6 +26,12 @@
             android:title="@string/pref_title_download_to_separate_directories"
             android:summary="@string/pref_summary_download_to_separate_directories"/>
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_key_download_to_temporary_directory"
+            android:title="@string/pref_title_download_to_temporary_directory"
+            android:summary="@string/pref_summary_download_to_temporary_directory"/>
+
         <Preference
             android:title="@string/pref_title_video_download_folder"
             android:key="@string/pref_key_video_download_folder"
