Add padding and background to make the option menuitem more finger-friendly

--- a/app/src/main/res/layout/video_cell.xml
+++ b/app/src/main/res/layout/video_cell.xml
@@ -117,8 +117,11 @@
 			android:layout_marginEnd="8dp"
 			android:layout_marginStart="8dp"
 			android:layout_marginTop="8dp"
-			android:background="@android:color/transparent"
-			android:padding="5dp"
+			android:background="@color/video_cell_highlighted_background"
+			android:paddingLeft="20dp"
+			android:paddingTop="5dp"
+			android:paddingRight="20dp"
+			android:paddingBottom="5dp"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="1.0"
