--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,8 @@
 	<color name="video_cell_background">#111517</color>
 	<color name="video_cell_text_main">#F5F5F5</color>
 	<color name="video_cell_text_details">#808080</color>
+	<color name="video_cell_highlighted_background">@color/colorPrimaryDark</color>
+
 	<color name="grid_view_background">@color/colorPrimaryDark</color>
 	<color name="popup_menu">#FF303030</color>  <!-- Identical to @color/background_material_dark -->
 
