--- a/app/src/main/res/values/strings_downloads.xml
+++ b/app/src/main/res/values/strings_downloads.xml
@@ -6,6 +6,7 @@
 	<string name="download_video">Download Video</string>
 	<string name="starting_video_download">Downloading \'%s\'…</string>
 	<string name="video_download_stream_error">Could not download \'%s\'.</string>
+	<string name="video_stream_not_found_with_request_resolution">No video stream found for the requested resolution, between %s - %s</string>
 	<string name="delete_download">Delete Download</string>
 	<string name="video_downloaded">\'%s\' downloaded.</string>
 	<string name="no_downloaded_videos_text">You haven\'t downloaded any videos yet.\n\nOnce you do, they will show up here.</string>
